RESOLVED FIXED155259
Added missing #if(SOUP) after r197591.
https://bugs.webkit.org/show_bug.cgi?id=155259
Summary Added missing #if(SOUP) after r197591.
Konstantin Tokarev
Reported 2016-03-09 14:10:24 PST
Added missing #if(SOUP) after r197591.
Attachments
Patch (1.55 KB, patch)
2016-03-09 14:12 PST, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2016-03-09 14:12:05 PST
Alex Christensen
Comment 2 2016-03-09 15:18:29 PST
Are you using GStreamer without soup?
Konstantin Tokarev
Comment 3 2016-03-09 15:20:12 PST
Yes
Alex Christensen
Comment 4 2016-03-09 15:23:32 PST
Comment on attachment 273472 [details] Patch r=me just curious, what network stack are you using?
WebKit Commit Bot
Comment 5 2016-03-09 16:13:56 PST
Comment on attachment 273472 [details] Patch Clearing flags on attachment: 273472 Committed r197897: <http://trac.webkit.org/changeset/197897>
WebKit Commit Bot
Comment 6 2016-03-09 16:14:01 PST
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 7 2016-03-09 17:18:07 PST
(In reply to comment #4) > Comment on attachment 273472 [details] > Patch > > r=me > just curious, what network stack are you using? Qt's, no doubt. :)
Konstantin Tokarev
Comment 8 2016-03-11 13:21:12 PST
Exactly!
Note You need to log in before you can comment on or make changes to this bug.