Added missing #if(SOUP) after r197591. https://bugs.webkit.org/show_bug.cgi?id=155259

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-03-09
Reviewed by Alex Christensen.

No new tests needed.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:

Canonical link: https://commits.webkit.org/173372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197897 268f45cc-cd09-0410-ab3c-d52691b4dbfc